--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -1,17 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="{{ "/assets/css/pico.min.css" | url }}">
-		<title>My 11ty Blog</title>
-	</head>
-	<body>
-		<header class="container">
-			<h1>My 11ty Blog</h1>
-		</header>
-		<main class="container">
-			{{ content }}
-		</main>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{{ "/assets/css/picnic.min.css" | url }}">
+    <title>My 11ty Blog</title>
+    <style>
+      .container {
+        background: #fff;
+        text-align: left;
+        width: 90%;
+        max-width: 960px;
+        margin: 0 auto;
+        padding: 80px 0 0;
+      }
+    </style>
+  </head>
+  <body>
+    <nav>
+      <a href="/" class="brand"><span>My Blog</span></a
+      ><input id="bmenu" type="checkbox" class="show" /><label
+        for="bmenu"
+        class="burger toggle pseudo button"
+        >menu</label
+      >
+      <div class="menu">
+        <a href="/tests" class="pseudo button icon-help-circled">Item1</a>
+        <a href="/tests" class="pseudo button icon-help-circled">Item2</a>
+        <a href="/tests" class="pseudo button icon-help-circled">Item3</a>
+      </div>
+    </nav>
+    <main class="container">{{ content }}</main>
+  </body>
 </html>
